syntax = "proto3";

option java_package = "com.hipaduck.chillaxingcat";
option java_multiple_files = true;

// 생성/수정시 https://developers.google.com/protocol-buffers/docs/proto3?hl=ko 참고
message CurrentDayData {
  // local notification enabled value
  string current_day_date = 1;
  string current_day_status = 2;
  string current_day_history = 3;
}